--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "id": "5ca7bbab-2620-419e-83fe-6c5c5bc4dcb1",
    "metadata": {},
    "outputs": [
@@ -19,17 +19,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  0  20]\n",
-      " [  5  30]\n",
-      " [ 10  40]\n",
-      " [ 15  50]\n",
-      " [ 20  60]\n",
-      " [ 25  70]\n",
-      " [ 30  80]\n",
-      " [ 35  90]\n",
-      " [ 40 100]\n",
-      " [ 45 110]\n",
-      " [ 50 120]]\n"
+      "[[  0  32]\n",
+      " [  5  41]\n",
+      " [ 10  50]\n",
+      " [ 15  59]\n",
+      " [ 20  68]\n",
+      " [ 25  77]\n",
+      " [ 30  86]\n",
+      " [ 35  95]\n",
+      " [ 40 104]\n",
+      " [ 45 113]\n",
+      " [ 50 122]]\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "n = len(temperatures_celsius)\n",
     "\n",
     "temperatures_celsius = np.array(temperatures_celsius)\n",
-    "temperatures_fahrenheit = temperatures_celsius*2 +20 \n",
+    "temperatures_fahrenheit = temperatures_celsius*9/5 + 32\n",
     "\n",
     "temp_pair = np.array([[0,0]]*n)\n",
     "\n",
@@ -58,28 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "da1f5027-33f3-443c-8cdf-89385e27fb4a",
+   "execution_count": 51,
+   "id": "f9b6110e-2394-4e9d-9fc2-ba82215c1fc5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1: 1  2  3  4  5 \n",
-      "2: 6  7  8  9  10\n",
-      "3: 11 12 13 14 15\n",
-      "4: 16 17 18 19 20\n",
-      "5: 21 22 23 24 25\n"
+      "1 : 1   2   3   4   5   \n",
+      "2 : 2   4   6   8   10  \n",
+      "3 : 3   6   9   12  15  \n",
+      "4 : 4   8   12  16  20  \n",
+      "5 : 5   10  15  20  25  \n"
      ]
     }
    ],
    "source": [
-    "j = 1\n",
     "for i in range(1,6):\n",
-    "    print(f'{i}: {j:<2} {j+1:<2} {j+2:<2} {j+3:<2} {j+4}')\n",
-    "    j = j+5\n",
-    "    "
+    "    print(f'{i} : ', end = '')\n",
+    "    for j in range(1,6):\n",
+    "        print(f'{j * i :<4}', end = '')\n",
+    "    print('')"
    ]
   },
   {
